ctdb: strip trailing spaces from nodes file.

This is essentially commit 15ac12af9c00adb05dcdfcb637777b503b87994b
from master backported.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=11365

Signed-off-by: Michael Adam <obnox@samba.org>
Reviewed-by: Jose A. Rivera <jarrpa@samba.org>

Autobuild-User(v4-2-test): Karolin Seeger <kseeger@samba.org>
Autobuild-Date(v4-2-test): Mon Nov  2 13:57:12 CET 2015 on sn-devel-104